<!--
  Copyright (c) 2018 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <it.diab.settings.widgets.StylePreference
        app:defaultValue="1"
        app:key="pref_ui_style"
        app:summary="%s"
        app:title="@string/settings_ui_theme_title" />

    <it.diab.settings.widgets.ExportPreference
        app:key="pref_export_xlsx"
        app:dialogMessage="@string/export_ask_xlsx_message"
        app:dialogTitle="@string/export_ask_xlsx_title"
        app:summary="@string/export_ask_xlsx_summary"
        app:title="@string/export_ask_xlsx_title" />

    <androidx.preference.PreferenceCategory app:title="@string/settings_glucose_thresholds_category">

        <androidx.preference.SeekBarPreference
            android:max="220"
            app:defaultValue="180"
            app:key="pref_glucose_threshold_high"
            app:min="160"
            app:showSeekBarValue="true"
            app:title="@string/settings_glucose_thresholds_high" />

        <androidx.preference.SeekBarPreference
            android:max="70"
            app:defaultValue="60"
            app:key="pref_glucose_threshold_low"
            app:min="50"
            app:showSeekBarValue="true"
            app:title="@string/settings_glucose_thresholds_low" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="plugin_category"
        app:title="@string/settings_plugin_category_title">

        <androidx.preference.Preference
            app:key="pref_plugin_manager"
            app:persistent="false"
            app:title="@string/settings_plugin_manage_title" />

        <androidx.preference.Preference
            app:key="pref_plugin_remover"
            app:persistent="false"
            app:title="@string/settings_plugin_remove" />

        <it.diab.settings.widgets.ExportPreference
            app:key="pref_export_ml_data"
            app:persistent="false"
            app:dialogMessage="@string/export_ask_ml_message"
            app:dialogTitle="@string/export_ask_ml_title"
            app:title="@string/export_ask_ml_title" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
